--- a/src/basic_scss/_base.scss
+++ b/src/basic_scss/_base.scss
@@ -1,7 +1,15 @@
+@import './variables';
+
 * {
   box-sizing: border-box;
 }
 
 html {
   font-size: 16px;
+}
+
+.container {
+  max-width: 1290px;
+  margin: 0 auto;
+  padding: 0 $spacing-base*2;
 }
