home page basic layout

--- a/src/basic_scss/_colors.scss
+++ b/src/basic_scss/_colors.scss
@@ -1,5 +1,5 @@
 $color-primary: #070227;
-$color-secondary: #272fda;
+$color-secondary: #4c87e6;
 $color-light: #c2eaff;
 $color-bg: #ebf8ff;
 $color-accent: #e34f7e;
