--- a/src/basic_scss/_variables.scss
+++ b/src/basic_scss/_variables.scss
@@ -1,4 +1,4 @@
-$font-text: 'Lato', sans-serif;
+$font-text: 'Open Sans', sans-serif;
 $font-logo: 'Courgette', cursive;
 
 $spacing-base: 0.625rem;
