--- a/src/basic_scss/_base.scss
+++ b/src/basic_scss/_base.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './colors';
 
 * {
   box-sizing: border-box;
@@ -6,6 +7,10 @@
 
 html {
   font-size: 16px;
+}
+
+body {
+  background-color: $color-bg;
 }
 
 .container {
