--- a/src/components/HomePage/_homePage.scss
+++ b/src/components/HomePage/_homePage.scss
@@ -19,6 +19,7 @@
     font-weight: 700;
     font-size: 3rem;
     box-shadow: 0px 8px 24px 0px rgba(7, 2, 39, 0.4);
+    color: $color-white;
 
     &:hover {
       background-color: #3b7be3;
