filters and search funcionality added to set page

--- a/src/components/NewFlashcard/_newFlashcard.scss
+++ b/src/components/NewFlashcard/_newFlashcard.scss
@@ -1,7 +1,7 @@
 @import '../../basic_scss/colors';
 @import '../../basic_scss/variables';
 
-form {
+.newFlashAddForm {
   display: flex;
   flex-direction: column;
   width: 70%;
