flashcard component funcionality and styling done

--- a/src/basic_scss/_variables.scss
+++ b/src/basic_scss/_variables.scss
@@ -2,3 +2,4 @@ $font-text: 'Open Sans', sans-serif;
 $font-logo: 'Courgette', cursive;
 
 $spacing-base: 0.625rem;
+$box-shadow-base: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
