--- a/src/basic_scss/_colors.scss
+++ b/src/basic_scss/_colors.scss
@@ -1,7 +1,7 @@
 $color-primary: #070227;
 $color-secondary: #4c87e6;
 $color-light: #c2eaff;
-$color-bg: #ebf8ff;
+$color-bg: #f6f6f6;
 $color-accent: #e34f7e;
 $color-white: #fff;
 $color-black: #000;
