--- a/src/components/flashcard/_flashcard.scss
+++ b/src/components/flashcard/_flashcard.scss
@@ -6,6 +6,7 @@
   min-width: 250px;
   min-height: 150px;
   perspective: 1000px;
+  margin: $spacing-base*2;
 
   .flashcard__inner {
     position: relative;
@@ -31,6 +32,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: $spacing-base*2;
 
       .flashcard__text {
         font-family: $font-text;
