flashcard turn changed from hover to click

--- a/src/components/flashcard/_flashcard.scss
+++ b/src/components/flashcard/_flashcard.scss
@@ -44,8 +44,8 @@
       transform: rotateY(180deg);
     }
   }
+}
 
-  &:hover .flashcard__inner {
-    transform: rotateY(180deg);
-  }
+.back .flashcard__inner {
+  transform: rotateY(180deg);
 }
