problem with page refresh in FlashcargBig component

--- a/src/basic_scss/_base.scss
+++ b/src/basic_scss/_base.scss
@@ -22,8 +22,13 @@ body {
 a {
   text-decoration: none;
   color: $color-text;
+
+  &:active {
+    border: none;
+  }
 }
 
 button {
   cursor: pointer;
 }
+
