edit flashcard funcionality done

--- a/src/components/NewFlashcard/_newFlashcard.scss
+++ b/src/components/NewFlashcard/_newFlashcard.scss
@@ -89,6 +89,7 @@
     .btn__cancel {
       border: 1px solid $color-secondary;
       color: $color-secondary;
+      background-color: $color-white;
     }
   }
 }
