problem with big flashcard turn solved - js logic separeted from css flashcard turn

--- a/src/components/Set/_set.scss
+++ b/src/components/Set/_set.scss
@@ -79,6 +79,10 @@
       padding: $spacing-base*0.5;
       border-bottom: 2px solid $color-white;
 
+      &.active {
+        border-bottom: 2px solid $color-secondary;
+      }
+
       &:hover {
         border-bottom: 2px solid $color-secondary;
       }
