--- a/src/components/flashcardBig/_flashcardBig.scss
+++ b/src/components/flashcardBig/_flashcardBig.scss
@@ -40,6 +40,16 @@
     justify-content: center;
     width: 80%;
 
+    .changeBox {
+      .active {
+        display: block;
+      }
+
+      .d-none {
+        display: none;
+      }
+    }
+
     .change__previous,
     .change_next {
       cursor: pointer;
