--- a/src/components/Set/_set.scss
+++ b/src/components/Set/_set.scss
@@ -13,10 +13,18 @@
     .main__header {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       margin-bottom: $spacing-base*2;
 
       .switch__display {
         display: flex;
+      }
+
+      .setName {
+        font-family: $font-text;
+        text-transform: uppercase;
+        color: $color-ligt-grey;
+        font-size: 1.3rem;
       }
 
       .btn__oneFlashcard {
