--- a/src/components/yourFields/_yourFields.scss
+++ b/src/components/yourFields/_yourFields.scss
@@ -27,6 +27,7 @@
       text-transform: uppercase;
       font-weight: 700;
       font-size: 1.5rem;
+      border: none;
 
       h3 {
         margin-bottom: $spacing-base;
@@ -36,10 +37,16 @@
     }
 
     .setsNavigation__back {
+      display: flex;
+      justify-content: space-around;
       background-color: $color-white;
       color: $color-secondary;
       border: 2px solid $color-secondary;
       padding: 8% 2%;;
+
+      h3 {
+        margin: 0;
+      }
     }
   }
 
