search funcionality done

--- a/src/components/flashcard/_flashcard.scss
+++ b/src/components/flashcard/_flashcard.scss
@@ -72,6 +72,10 @@
       border-radius: $spacing-base;
       min-width: 450px;
       min-height: 300px;
+
+      .flashcard__text {
+        font-size: 2rem;
+      }
     }
   }
 }
