--- a/src/components/yourFields/_yourFields.scss
+++ b/src/components/yourFields/_yourFields.scss
@@ -1,5 +1,7 @@
 @import '../../basic_scss/colors';
 @import '../../basic_scss/variables';
+@import '../../basic_scss/base';
+@import '../../basic_scss/mixins';
 
 .sets {
   display: flex;
@@ -8,11 +10,20 @@
   font-family: $font-text;
   color: $color-text;
 
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .setsNavigation {
     width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include mobile {
+      width: 80%;
+    }
 
     .setsNavigation__box {
       background-color: $color-secondary;
@@ -20,7 +31,7 @@
       cursor: pointer;
       width: 70%;
       border-radius: $spacing-base*0.5;
-      padding: 13% 2%;
+      padding: 13% 5%;
       text-align: center;
       box-shadow: $box-shadow-base;
       margin: $spacing-base*2;
@@ -29,8 +40,24 @@
       font-size: 1.5rem;
       border: none;
 
+      &:hover {
+        background-color: #3b7be3;
+      }
+
+      @include tablet {
+        width: 80%;
+      }
+
+      @include tabletPortrait {
+        width: 95%;
+      }
+
       h3 {
         margin-bottom: $spacing-base;
+
+        @include tabletPortrait {
+          font-size: 1.2rem;
+        }
       }
 
 
@@ -42,7 +69,12 @@
       background-color: $color-white;
       color: $color-secondary;
       border: 2px solid $color-secondary;
-      padding: 8% 2%;;
+      padding: 8% 2%;
+
+      &:hover {
+        background-color: $color-secondary;
+        color: $color-white;
+      }
 
       h3 {
         margin: 0;
@@ -52,6 +84,11 @@
 
   .setsMain {
     width: 70%;
+
+    @include mobile {
+      width: 95%;
+    }
+
 
     .setsHeader {
       display: flex;
@@ -63,6 +100,7 @@
 
       h2 {
         text-transform: uppercase;
+        text-align: center;
       }
 
       .setsHeader__line {
@@ -89,6 +127,20 @@
         text-align: center;
         box-shadow: $box-shadow-base;
         margin: $spacing-base;
+
+        @include tablet {
+          width: 70%;
+        }
+
+        @include tabletPortrait {
+          width: 80%;
+          padding: 5% 5%;
+        }
+
+        @include mobile {
+          width: 90%;
+          padding: 10% 5%
+        }
 
         p {
           text-transform: uppercase;
